# course_5

./: pyproject.toml  readme.md
src/: classes_API.py  classes_DB.py  classes_aux.py  classes_savers.py  classes_vacancy.py  main.py
tests/: test_main.py
